--- a/login.html
+++ b/login.html
@@ -21,11 +21,11 @@
               <div class="sign-in-htm">
                 <div class="group">
                   <label for="user" class="label">Username</label>
-                  <input id="user" type="text" class="input">
+                  <input id="username-signin" type="text" class="input">
                 </div>
                 <div class="group">
                   <label for="pass" class="label">Password</label>
-                  <input id="pass" type="password" class="input" data-type="password">
+                  <input id="password-signin" type="password" class="input" data-type="password">
                 </div>
                 <div class="group">
                   <input id="check" type="checkbox" class="check" checked>
@@ -42,19 +42,19 @@
               <div class="sign-up-htm">
                 <div class="group">
                   <label for="user" class="label">Username</label>
-                  <input id="user" type="text" class="input">
+                  <input id="username" type="text" class="input">
                 </div>
                 <div class="group">
                   <label for="pass" class="label">Password</label>
-                  <input id="pass" type="password" class="input" data-type="password">
+                  <input id="password" type="password" class="input" data-type="password">
                 </div>
                 <div class="group">
                   <label for="pass" class="label">Repeat Password</label>
-                  <input id="pass" type="password" class="input" data-type="password">
+                  <input id="password" type="password" class="input" data-type="password">
                 </div>
                 <div class="group">
                   <label for="pass" class="label">Email Address</label>
-                  <input id="pass" type="text" class="input">
+                  <input id="email" type="text" class="input">
                 </div>
                 <div class="group">
                   <input type="submit"  class="button" value="Sign Up" onclick="signup()">
@@ -68,4 +68,5 @@
           </div>
         </div>
       </body>
+      <script src="configuration.js"></script>
 </html>
